--- a/css/style.css
+++ b/css/style.css
@@ -83,14 +83,14 @@ nav a:hover{
   z-index: 1;
   /*ask
   /* Requirement 3a code here*/
-  position: relative;
+  position: absolute;
   top: -40px;
   
 }
 /* ask
 /* Requirement 3b code here*/
 .skip a:focus{
-  position: relative;
+  position: absolute;
   top: 0px;
 
 }
@@ -116,6 +116,7 @@ nav a:hover{
 /* Remainder of requirements here: */
 
 header{
+
   background-attachment: fixed; /* Parallax effect */
   background-position: center; /* Parallax effect */
   background-size: cover; /* Parallax effect */
@@ -123,10 +124,15 @@ header{
   height: 400px; /* Parallax effect */
 
   /* YOUR CODE HERE; */
+  
   column-span: all;
+  grid-column: 1/-1;
   grid-row: 1 / span 1;
-  background-image: url(".../images/header.jpg");
-
+  background-image: url("../images/header.jpg");
+  background-repeat: no-repeat;
+  
+  
+  
 }
 
 
@@ -198,6 +204,7 @@ header{
   nav{
     padding: 30px 0;
     /* ask */
+    text-align: right;
     /* Your code here */
   }
 
